--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d dist"
   },
   "dependencies": {
     "eslint": "8.47.0",
@@ -14,5 +16,11 @@
     "next": "13.4.18",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "gh-pages": "^6.0.0",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3"
   }
 }
